--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
 <!DOCTYPE html>
 <html lang="en">
 
@@ -56,8 +54,7 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <a class="float-button" target="_blank"
-        href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+    <a class="float-button" target="_blank" href="https://wa.me/+258848697194">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
         <span>Fale connosco!<span>
     </a>
@@ -364,13 +361,13 @@
                 <article>
                     <!-- Dias da Semana -->
                     <ul class="days">
-                        <li>Segunda-feira</li>
-                        <li>Terça-feira</li>
-                        <li>Quarta-feira</li>
-                        <li>Quinta-feira</li>
-                        <li>Sexta-feira</li>
-                        <li>Sábado</li>
-                        <li>Domingo</li>
+                        <li>1ª Semana:<br> 1 a 7 de maio</li>
+                        <li>2ª Semana:<br> 8 a 14 de maio</li>
+                        <li>3ª Semana:<br> 15 a 21 de maio</li>
+                        <li>4ª Semana:<br> 22 a 28 de maio</li>
+                        <li>5ª Semana:<br> 29 de maio a 4 de junho</li>
+                        <li>6ª Semana:<br> 5 a 11 de junho</li>
+                        <li>6ª Semana:<br> 12 a 19 de junho</li>
                     </ul>
 
                     <!-- Datas e Eventos -->
@@ -379,105 +376,117 @@
                         <li class="fade"><span class="date">30</span></li>
                         <li><span class="date">1</span>
                             <a href="#" class="meeting-2">
-                                <b>Promoção:</b> Limpeza de Pele 15% OFF
+                                <b>Workshop:</b> Amamentação
                             </a>
                         </li>
                         <li><span class="date">2</span></li>
                         <li><span class="date">3</span></li>
                         <li><span class="date">4</span>
                             <a href="#" class="meeting">
-                                <b>Workshop:</b> Cuidados com a Pele Oleosa
+                                <b>Curso:</b> Preparação para a Amamentação
                             </a>
                         </li>
-                        <li><span class="date">5</span><a href="#" class="meeting-2">
-                                <b>Promoção:</b> Limpeza de Pele 15% OFF
-                            </a></li>
+                        <li><span class="date">5</span>
+                            <a href="#" class="meeting-2">
+                                <b>Promoção:</b> Pediatria 10% OFF
+                            </a>
+                        </li>
                         <li><span class="date">6</span></li>
 
                         <!-- Semana 2 -->
                         <li><span class="date">7</span>
                             <a href="#" class="meeting">
-                                <b>Destaque:</b> Massagem Relaxante 10% OFF
+                                <b>Workshop:</b> Introdução Alimentar
                             </a>
                         </li>
                         <li><span class="date">8</span>
-                            <a href="" class="meeting-2"> <b>Promoção:</b> Pacote Redução de Medidas 20% OFF</a>
+                            <a href="#" class="meeting-2">
+                                <b>Curso:</b> Nutrição Pré-natal
+                            </a>
                         </li>
                         <li><span class="date">9</span></li>
                         <li><span class="date">10</span>
                             <a href="#" class="meeting">
-                                <b>Evento:</b> Avaliação Facial Gratuita
+                                <b>Curso:</b> Exercício Físico na Gravidez
                             </a>
                         </li>
                         <li><span class="date">11</span></li>
-                        <li><span class="date">12</span><a href="#" class="meeting-2">
-                                <b>Promoção:</b> Limpeza de Pele 15% OFF
-                            </a></li>
+                        <li><span class="date">12</span>
+                            <a href="#" class="meeting-2">
+                                <b>Workshop:</b> Primeiros Socorros
+                            </a>
+                        </li>
                         <li><span class="date">13</span></li>
 
                         <!-- Semana 3 -->
                         <li><span class="date">14</span>
                             <a href="#" class="meeting">
-                                <b>Promoção:</b> Pacote Redução de Medidas 20% OFF
+                                <b>Curso:</b> Diabetes Gestacional
                             </a>
                         </li>
                         <li><span class="date">15</span>
-                            <a href="" class="meeting-2"> <b>Promoção:</b> Pacote Redução de Medidas 20% OFF</a>
+                            <a href="#" class="meeting-2">
+                                <b>Curso:</b> Nutrição Pré-conceção
+                            </a>
                         </li>
                         <li><span class="date">16</span>
                             <a href="#" class="meeting">
-                                <b>Destaque:</b> Sessão de Radiofrequência
+                                <b>Workshop:</b> Preparação para o Parto
                             </a>
                         </li>
                         <li><span class="date">17</span></li>
                         <li><span class="date">18</span></li>
-                        <li><span class="date">19</span><a href="#" class="meeting-2">
-                                <b>Promoção:</b> Limpeza de Pele 15% OFF
-                            </a></li>
+                        <li><span class="date">19</span>
+                            <a href="#" class="meeting-2">
+                                <b>Curso:</b> Snoezelen na Gravidez
+                            </a>
+                        </li>
                         <li><span class="date">20</span>
                             <a href="#" class="meeting">
-                                <b>Workshop:</b> Técnicas de Relaxamento Facial
+                                <b>Workshop:</b> Amamentação (em inglês)
                             </a>
                         </li>
 
                         <!-- Semana 4 -->
                         <li><span class="date">21</span></li>
                         <li><span class="date">22</span>
-                            <a href="" class="meeting-2"> <b>Promoção:</b> Pacote Redução de Medidas 20% OFF</a>
+                            <a href="#" class="meeting-2">
+                                <b>Curso:</b> Exercício na Gravidez
+                            </a>
                         </li>
                         <li><span class="date">23</span></li>
                         <li><span class="date">24</span>
                             <a href="#" class="meeting">
-                                <b>Promoção:</b> Day Spa Completo 25% OFF
+                                <b>Workshop:</b> Cuidados na Gravidez
                             </a>
                         </li>
                         <li><span class="date">25</span></li>
-                        <li><span class="date">26</span><a href="#" class="meeting-2">
-                                <b>Promoção:</b> Limpeza de Pele 15% OFF
-                            </a></li>
+                        <li><span class="date">26</span>
+                            <a href="#" class="meeting-2">
+                                <b>Promoção:</b> Consulta Pré-natal 10% OFF
+                            </a>
+                        </li>
                         <li><span class="date">27</span></li>
 
                         <!-- Semana 5 -->
                         <li><span class="date">28</span>
                             <a href="#" class="meeting">
-                                <b>Promoção:</b> Esfoliação Corporal 15% OFF
+                                <b>Curso:</b> Parentalidade
                             </a>
                         </li>
                         <li><span class="date">29</span>
-                            <a href="" class="meeting-2"> <b>Promoção:</b> Pacote Redução de Medidas 20% OFF</a>
+                            <a href="#" class="meeting-2">
+                                <b>Workshop:</b> Cuidados Pediátricos
+                            </a>
                         </li>
                         <li><span class="date">30</span>
                             <a href="#" class="meeting">
-                                <b>Encerramento:</b> Black Friday Pre-pos
+                                <b>Encerramento:</b> Encontro com a Pediatria
                             </a>
                         </li>
                         <li><span class="date">31</span></li>
-                        <li><span class="date">1</span></li>
-                        <li><span class="date">2</span><a href="#" class="meeting">
-                                <b>Promoção:</b> Limpeza de Pele 15% OFF
-                            </a></li>
-                        <li><span class="date">3</span></li>
                     </ul>
+
 
                     <!-- Navegação -->
                     <div class="calendarNav text-center">
