--- a/pages/footer.html
+++ b/pages/footer.html
@@ -106,7 +106,8 @@
                 <div class="col-lg-4">
                     <div class="footer__copyright__text">
                         <p>@A Clinica (2025) Todos os direitos reservados. | <b class="text-white underline"> <a
-                                    class="text-white" href="techzone.co.mz "> Powered by Techzone</a></b></p>
+                                    class="text-white" target="_blank" href="https://techzone.co.mz"> Powered by
+                                    Techzone</a></b></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
