--- a/info.html
+++ b/info.html
@@ -1,13 +1,3 @@
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
 <!DOCTYPE html>
 <html lang="en">
 
@@ -205,8 +195,7 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <a class="float-button" target="_blank"
-        href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+    <a class="float-button" target="_blank" href="https://wa.me/+258848697194">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
         <span>Fale connosco!<span>
     </a>
@@ -264,7 +253,7 @@
                                         <input type="text" class="form-control form-group" placeholder="Nome" />
                                         <input type="email" class="form-control form-group" placeholder="Email" />
                                         <input type="text" class="form-control form-group" placeholder="Assunto" />
-                                        <textarea class="form-control form-group" placeholder="Messagem"
+                                        <textarea class="form-control form-group" placeholder="Mensagem"
                                             style="height: 16rem;"></textarea>
                                         <p style="text-align: initial;font-size: 11px;">Os dados recolhidos, serão
                                             utilizados exclusivamente para prestar as
