--- a/pages/header.html
+++ b/pages/header.html
@@ -45,12 +45,93 @@
             <li class="nav-item dropdown">
                 <a class="arrow dropdown-toggle" href="#" data-toggle="dropdown">Consultas</a>
                 <ul class="dropdown-menu pt-0">
-                    <li><a class="sub-arrow" href="amament-pre-parto.html#pre">Consulta Pré-parto</a></li>
-                    <li><a class="sub-arrow" href="amament-pre-parto.html#pos">Consulta Pós-parto</a></li>
-                    <li><a class="sub-arrow" href="viajante.html">Medicina do Viajante</a></li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Enfermagem <span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="enfermagem.html#domicilio">Apoio
+                                    domiciliário no
+                                    pós-parto</a></li>
+                            <li><a class="dropdown-item underline" href="enfermagem.html#conseferm">Consulta de
+                                    enfermagem</a></li>
+                            <li><a class="dropdown-item underline" href="enfermagem.html#pensos">Pensos</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Medicina do
+                            Viajante <span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="viajante.html">Consulta</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Nutrição<span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="nutricao.html#A">Nutrição Geral</a></li>
+                            <li><a class="dropdown-item underline" href="nutricao.html#B">Nutrição Infantil</a>
+                            </li>
+                            <!-- <li><a href="nutricao.html#C">Diabetes Gestacional</a></li> -->
+                            <li><a class="dropdown-item underline" href="nutricao.html#D">Pré-conceção</a></li>
+                            <li><a class="dropdown-item underline" href="nutricao.html#E">Pré-natal</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Pediatria<span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="pediatria.html#D">Consulta de sono
+                                    infantil</a></li>
+                            <li><a class="dropdown-item underline" href="pediatria.html#C">Criança doente</a></li>
+                            <li><a class="dropdown-item underline" href="pediatria.html#A">Pré-natal</a></li>
+                            <li><a class="dropdown-item underline" href="pediatria.html#E">Introdução
+                                    alimentar</a></li>
+                            <li><a class="dropdown-item underline" href="pediatria.html#B">Rotina</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Terapia
+                            ocupacional<span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="terapia.html#A">Infantil</a></li>
+                            <li><a class="dropdown-item underline" href="terapia.html#B">Neurológica</a></li>
+                            <li><a class="dropdown-item underline" href="terapia.html#D">Saúde Mental</a></li>
+                            <li><a class="dropdown-item underline" href="terapia.html#E">Snoezelen</a></li>
+                            <li><a class="dropdown-item underline" href="terapia.html#C">Snoezelen no
+                                    Pós-Parto</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Testes
+                            diagnósticos<span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="teste.html#A">Teste do pezinho</a></li>
+                            <li><a class="dropdown-item underline" href="teste.html#B">Teste rápido de amigdalite
+                                    bacteriana</a>
+                            </li>
+                            <li><a class="dropdown-item underline" href="teste.html#D">Teste rápido de malária</a>
+                            </li>
+                            <li><a class="dropdown-item underline" href="teste.html#E">Teste rápido de urina</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Psicologia<span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="Psicologia.html#A">Avaliação
+                                    Neuropsicológica</a></li>
+                            <li><a class="dropdown-item underline" href="Psicologia.html#B">Psicologia do Adolescente e
+                                    criança</a>
+                            </li>
+                            <li><a class="dropdown-item underline" href="Psicologia.html#D">Psicologia do Adulto</a>
+                            </li>
+                            <li><a class="dropdown-item underline" href="Psicologia.html#E">Psicologia Materna</a></li>
+                            <li><a class="dropdown-item underline" href="Psicologia.html#E">Terapia de Casal e
+                                    Familiar</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
         </ul>
+
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a class="arrow dropdown-toggle" href="#" data-toggle="dropdown">Vacinação</a>
@@ -59,6 +140,60 @@
                     <li><a class="sub-arrow" href="vacinacao.html#B">Gravidez</a></li>
                     <li><a class="sub-arrow" href="vacinacao.html#D">Infantil</a></li>
                     <li><a class="sub-arrow" href="vacinacao.html#E">Viajante</a></li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="arrow dropdown-toggle" href="#" data-toggle="dropdown">Gravidez</a>
+                <ul class="dropdown-menu pt-0">
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">A Clínica durante a
+                            gravidez <span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="amament-pre-parto.html#pre">Amamentação</a>
+                            </li>
+                            <li><a class="dropdown-item underline" href="pediatria.html#A">Pediatria pré-natal</a>
+                            </li>
+                            <li><a class="dropdown-item underline" href="nutricao.html#D">Nutrição pré-conceção
+                                </a></li>
+                            <li><a class="dropdown-item underline" href="nutricao.html#E">Nutrição pré-natal</a>
+                            </li>
+                            <li><a class="dropdown-item underline" href="gravidez.html#A">Diabetes Gestacional</a>
+                            </li>
+                            <li><a class="dropdown-item underline" href="gravidez.html#B">Snoezelen na
+                                    gravidez</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Medicina do
+                            Viajante <span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="curso-amamentacao-grupo.html">Curso em
+                                    grupo</a></li>
+                            <li><a class="dropdown-item underline" href="curso-amamentacao-indiv.html">Curso
+                                    Individual</a></li>
+                            <li><a class="dropdown-item underline" href="#">Preparation for Breastfeeding in English</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Preparação para o parto<span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="curso-prep-grupo.html">Curso em grupo</a>
+                            </li>
+                            <li><a class="dropdown-item underline" href="curso-prep-indiv.html">Curso
+                                    Individual</a></li>
+                            <li><a class="dropdown-item underline" href="#">Pre-natal course in English</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu position-relative">
+                        <a href="#" class="dropdown-item">Exercício Físico<span> ></span></a>
+                        <ul class="dropdown-menu submenu ">
+                            <li><a class="dropdown-item underline" href="gravidez.html#E">Plano de treino para a
+                                    gravidez</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
         </ul>
@@ -205,6 +340,18 @@
                                             </li>
                                             <li><a href="teste.html#D">Teste rápido de malária</a></li>
                                             <li><a href="teste.html#E">Teste rápido de urina</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <span><img src="../img/icons/Pscologa.png" alt="">Psicologia</span>
+                                        <ul class="dropdown-sec">
+                                            <li><a href="Psicologia.html#A">Avaliação Neuropsicológica</a></li>
+                                            <li><a href="Psicologia.html#B">Psicologia do Adolescente e
+                                                    criança</a>
+                                            </li>
+                                            <li><a href="Psicologia.html#D">Psicologia do Adulto</a></li>
+                                            <li><a href="Psicologia.html#E">Psicologia Materna</a></li>
+                                            <li><a href="Psicologia.html#E">Terapia de Casal e Familiar</a></li>
                                         </ul>
                                     </li>
                                 </ul>
