--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -65,8 +65,7 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <a class="float-button" target="_blank"
-        href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+    <a class="float-button" target="_blank" href="https://wa.me/+258848697194">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
         <span>Fale connosco!<span>
     </a>
