--- a/pages/terapia.html
+++ b/pages/terapia.html
@@ -59,8 +59,7 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <a class="float-button" target="_blank"
-        href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+    <a class="float-button" target="_blank" href="https://wa.me/+258848697194">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
         <span>Fale connosco!<span>
     </a>
@@ -799,8 +798,8 @@
             EDiv.style.display = 'none';
             FDiv.classList.add('displayidr');
             showe.style.display = 'none';
-            title.textContent = "Terapia Snoezelen";
-            subtitulo.textContent = "N’A Clínica orgulhamo-nos de ter a única sala Snoezelen em Moçambique!!!";
+            title.textContent = "Terapia ocupacional";
+            subtitulo.textContent = "A terapia ocupacional ajuda a que o teu dia-a-dia corra melhor!";
             img.src = "../img/blog/details/Snoezelen.jpg";
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
