--- a/pages/curso-prep-indiv.html
+++ b/pages/curso-prep-indiv.html
@@ -107,7 +107,7 @@
                     <div class="services__details">
                         <div class="services__details__pic">
                             <div class="services__details__pic">
-                                <img src="../img/blog/details/152.jpg" alt="">
+                                <img src="../img/blog/details/curso-ind-parto.jpg" alt="">
                                 <div class="services__details__content" style="background-image: url(../img/bg4.png);">
                                     <div class="d-flex w-100 align-items-end">
                                         <div class="mr-3">
