--- a/pages/gravidez.html
+++ b/pages/gravidez.html
@@ -498,7 +498,7 @@
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.classList.add('displayidr'); // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/plano_de treino_para_a_gravidez.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Exercício Físico durante a gravidez"; // Atualiza o texto para "Pós-parto"
             subtitulo.textContent = "O exercício durante a gravidez é fundamental para a saúde materna e do bebé."; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
