--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-4">
         <div class="container mt-9">
-            <div class="blog__details__hero set-bg" data-setbg="img/blog/details/blog-hero.jpg">
+            <div class="blog__details__hero set-bg" data-setbg="img/blog/details/a_clinica_sobre_nós.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
                         <div class="blog__hero__text">
