--- a/pages/workshop-primeiros-socorros.html
+++ b/pages/workshop-primeiros-socorros.html
@@ -117,7 +117,8 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-5">
         <div class="container mt-9">
-            <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/socoros.jpg"
+            <div class="blog__details__hero set-bg mb-2 position-relative"
+                data-setbg="../img/blog/details/workshop_de_primeiros_socorros_pediátricos.jpg"
                 style="background: url('../img/blog/details/socoros.jpg') no-repeat center center/cover; height: 400px;">
                 <div class="services__details__content" style="background-image: url(../img/bg1.png);">
                     <div class="d-flex w-100 align-items-end">
