--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <section class="hero spad set-bg" data-setbg="img/hero-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mt-8 ml-5">
+                <div class="col-lg-6  ml-5">
                     <div class="hero__text">
                         <!-- <span>Bem-vindo à A Clínica</span> -->
                         <h2>Somos a aldeia <br>da SUA família</h2>
