--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -280,7 +280,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="pos-parto" style="display: none;">
+                <div id="pos-parto">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
                             <div class="blog__details__text ml-4 mr-4">
@@ -457,14 +457,6 @@
         // Executar ao carregar a página
         window.addEventListener('load', function () {
             checkHashAndLoad();
-        });
-        // Adicionar funcionalidade dos botões
-        conPreBtn.addEventListener('click', function () {
-            window.location.hash = "#pre"; // Atualiza o URL para "#pre" ao clicar no botão pré-parto
-        });
-
-        conPosBtn.addEventListener('click', function () {
-            window.location.hash = "#pos"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
         });
     </script>
 
