--- a/consultas.html
+++ b/consultas.html
@@ -328,13 +328,39 @@
                             <ul>
                                 <li><a href="pages/teste.htmlA"><i class="fa fa-check-circle"></i> Teste do pezinho</a>
                                 </li>
-                                <li><a href="pages-teste.html#B"><i class="fa fa-check-circle"></i> Teste rápido de
+                                <li><a href="pages/teste.html#B"><i class="fa fa-check-circle"></i> Teste rápido de
                                         amigdalite
                                         bacteriana</a></li>
-                                <li><a href="pages-teste.html#D"><i class="fa fa-check-circle"></i> Teste rápido de
+                                <li><a href="pages/teste.html#D"><i class="fa fa-check-circle"></i> Teste rápido de
                                         malária</a></li>
-                                <li><a href="pages-teste.html#E"><i class="fa fa-check-circle"></i> Teste rápido de
+                                <li><a href="pages/teste.html#E"><i class="fa fa-check-circle"></i> Teste rápido de
                                         urina</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6">
+                    <div class="services__item d-flex align-items-center border shadow-sm">
+                        <div class="services__item__icon">
+                            <img src="img/icons/primeiros-socoros.png" style="width: 80px;">
+                        </div>
+                        <div class="services__item__text">
+                            <h5>Testes Diagnósticos</h5>
+                            <ul>
+                                <li><a href="amament-pre-parto.html#pre"><i class="fa fa-check-circle"></i>
+                                        Amamentação</a>
+                                </li>
+                                <li><a href="pediatria.html#A"><i class="fa fa-check-circle"></i> Pediatria
+                                        pré-natal</a></li>
+                                <li><a href="nutricao.html#A"><i class="fa fa-check-circle"></i> Nutrição
+                                        pré-conceção</a></li>
+                                <li><a href="nutricao.html#D"><i class="fa fa-check-circle"></i> Nutrição pré-natal</a>
+                                </li>
+                                <li><a href="gravidez.html#A"><i class="fa fa-check-circle"></i> Diabetes
+                                        Gestacional</a></li>
+                                <li><a href="gravidez.html#B"><i class="fa fa-check-circle"></i> Snoezelen na
+                                        Gravidez</a></li>
                             </ul>
                         </div>
                     </div>
