--- a/consultas.html
+++ b/consultas.html
@@ -346,7 +346,8 @@
                             <img src="img/icons/primeiros-socoros.png" style="width: 80px;">
                         </div>
                         <div class="services__item__text">
-                            <h5>Testes Diagnósticos</h5>
+                            <h5>A Clínica durante a
+                                gravidez</h5>
                             <ul>
                                 <li><a href="amament-pre-parto.html#pre"><i class="fa fa-check-circle"></i>
                                         Amamentação</a>
