--- a/index.html
+++ b/index.html
@@ -710,121 +710,133 @@
                 </div>
             </div>
             <div class="row justify-content-between">
-                <div class="card">
-                    <div class="top">
-                        <div class="userDeatils">
-                            <div class="profileImg">
-                                <!-- Alterar a imagem para a logo da clínica ou foto do perfil -->
-                                <img src="img/profile.png" alt="A Clínica" class="cover">
+                <a target="_blank" href="https://www.instagram.com/aclinica.mz/p/DIGqiErCdTG/">
+                    <div class="card">
+                        <div class="top">
+                            <div class="userDeatils">
+                                <div class="profileImg">
+                                    <!-- Alterar a imagem para a logo da clínica ou foto do perfil -->
+                                    <img src="img/profile.png" alt="A Clínica" class="cover">
+                                </div>
+                                <h3>A Clínica<br><span>@aclinica.mz</span></h3>
                             </div>
-                            <h3>A Clínica<br><span>@a_clinica</span></h3>
-                        </div>
-                        <div class="dot">
-                            <img src="img/icons/dot.png" alt="dot">
-                        </div>
-                    </div>
-                    <div class="imgBg">
-                        <!-- Alterar a imagem para algo relacionado à clínica -->
-                        <img src="img/blog/blog-5.jpg" alt="bg" class="cover">
-                    </div>
-                    <div class="btns">
-                        <div class="left">
-                            <img src="img/icons/heart.png" alt="heart" class="heart" onclick="likeButton()">
-                            <img src="img/icons/comment.png" alt="comment">
-                            <img src="img/icons/share.png" alt="share">
-                        </div>
-                        <div class="right">
-                            <img src="img/icons/bookmark.png" alt="bookmark">
-                        </div>
-                    </div>
-                    <h4 class="likes">5,489 likes</h4>
-                    <h4 class="message">
-                        <b>A Clínica</b>
-                        A importância da atividade física durante a gravidez.
-                        <span>#gravidez</span>
-                        <span>#exercício</span>
-                        <span>#bemestar</span>
-                    </h4>
-                    <h4 class="comments">Ver todos os 546 comentários</h4>
-                </div>
-
-                <div class="card">
-                    <div class="top">
-                        <div class="userDeatils">
-                            <div class="profileImg">
-                                <!-- Alterar a imagem para a logo da clínica ou foto do perfil -->
-                                <img src="img/profile.png" alt="A Clínica" class="cover">
+                            <div class="dot">
+                                <img src="img/icons/dot.png" alt="dot">
                             </div>
-                            <h3>A Clínica<br><span>@a_clinica</span></h3>
                         </div>
-                        <div class="dot">
-                            <img src="img/icons/dot.png" alt="dot">
-                        </div>
-                    </div>
-                    <div class="imgBg">
-                        <!-- Alterar a imagem para algo relacionado ao serviço de psicologia -->
-                        <img src="img/gallery/gallery-3.jpg" alt="bg" class="cover">
-                    </div>
-                    <div class="btns">
-                        <div class="left">
-                            <img src="img/icons/heart.png" alt="heart" class="heart" onclick="likeButton()">
-                            <img src="img/icons/comment.png" alt="comment">
-                            <img src="img/icons/share.png" alt="share">
-                        </div>
-                        <div class="right">
-                            <img src="img/icons/bookmark.png" alt="bookmark">
-                        </div>
-                    </div>
-                    <h4 class="likes">3,800 likes</h4>
-                    <h4 class="message">
-                        <b>a clinica</b>
-                        A importância do vínculo mãe-filho nos primeiros anos.
-                        <span>#pediatria</span>
-                        <span>#saúdeinfantil</span>
-                    </h4>
-                    <h4 class="comments">Ver todos os 210 comentários</h4>
-                </div>
+                        <div class="imgBg">
 
-                <div class="card">
-                    <div class="top">
-                        <div class="userDeatils">
-                            <div class="profileImg">
-                                <!-- Alterar a imagem para a logo da clínica ou foto do perfil -->
-                                <img src="img/profile.png" alt="A Clínica" class="cover">
+                            <!-- Alterar a imagem para algo relacionado à clínica -->
+                            <img src="img/team/488648942_17845892778448741_6513558634018821785_n.jpg" alt="bg"
+                                class="cover">
+                        </div>
+                        <div class="btns">
+                            <div class="left">
+                                <img src="img/icons/heart_red.png" alt="heart" class="heart" onclick="likeButton()">
+                                <img src="img/icons/comment.png" alt="comment">
+                                <img src="img/icons/share.png" alt="share">
                             </div>
-                            <h3>A Clínica<br><span>@a_clinica</span></h3>
+                            <div class="right">
+                                <img src="img/icons/bookmark.png" alt="bookmark">
+                            </div>
                         </div>
-                        <div class="dot">
-                            <img src="img/icons/dot.png" alt="dot">
-                        </div>
-                    </div>
-                    <div class="imgBg">
-                        <!-- Alterar a imagem para algo relacionado ao serviço de nutrição -->
-                        <img src="img/gallery/gallery-6.jpg" alt="bg" class="cover">
-                    </div>
-                    <div class="btns">
-                        <div class="left">
-                            <img src="img/icons/heart.png" alt="heart" class="heart" onclick="likeButton()">
-                            <img src="img/icons/comment.png" alt="comment">
-                            <img src="img/icons/share.png" alt="share">
-                        </div>
-                        <div class="right">
-                            <img src="img/icons/bookmark.png" alt="bookmark">
-                        </div>
-                    </div>
-                    <h4 class="likes">4,256 likes</h4>
-                    <h4 class="message">
-                        <b>a clinica</b>
-                        Exercícios seguros para gestantes.
-                        <span>#exercícios</span>
-                        <span>#gravidez</span>
-                    </h4>
-                    <h4 class="comments">Ver todos os 412 comentários</h4>
-                </div>
+                        <h4 class="likes">55 likes</h4>
+                        <h4 class="message">
+                            <b>aclinica.mz</b>
+                            A Joana é a nossa Psicóloga Clínica. Apaixonada pela mente humana em todas as suas...
 
+                        </h4>
+                        <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz/p/DIGqiErCdTG/">Ver todos os
+                                546
+                                comentários</a></h4>
+                    </div>
+                </a>
+
+                <a target="_blank" href="https://www.instagram.com/p/DIQYLHrieeT/">
+                    <div class="card">
+                        <div class="top">
+                            <div class="userDeatils">
+                                <div class="profileImg">
+                                    <!-- Alterar a imagem para a logo da clínica ou foto do perfil -->
+                                    <img src="img/profile.png" alt="A Clínica" class="cover">
+                                </div>
+                                <h3>A Clínica<br><span>@aclinica.mz</span></h3>
+                            </div>
+                            <div class="dot">
+                                <img src="img/icons/dot.png" alt="dot">
+                            </div>
+                        </div>
+                        <div class="imgBg">
+
+                            <!-- Alterar a imagem para algo relacionado à clínica -->
+                            <img src="img/team/489610960_17846626650448741_6388324698183464706_n.jpg" alt="bg"
+                                class="cover">
+                        </div>
+                        <div class="btns">
+                            <div class="left">
+                                <img src="img/icons/heart_red.png" alt="heart" class="heart" onclick="likeButton()">
+                                <img src="img/icons/comment.png" alt="comment">
+                                <img src="img/icons/share.png" alt="share">
+                            </div>
+                            <div class="right">
+                                <img src="img/icons/bookmark.png" alt="bookmark">
+                            </div>
+                        </div>
+                        <h4 class="likes">55 likes</h4>
+                        <h4 class="message">
+                            <b>aclinica.mz</b>
+                            A Clínica vai abrir portas no dia 14 de Abril às 8 horas!
+
+                        </h4>
+                        <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz/p/DIGqiErCdTG/">Ver todos os
+                                10
+                                comentários</a></h4>
+                    </div>
+                </a>
+
+                <a target="_blank" href="https://www.instagram.com/aclinica.mz/p/DH_ndcaCIBF/">
+                    <div class="card">
+                        <div class="top">
+                            <div class="userDeatils">
+                                <div class="profileImg">
+                                    <!-- Alterar a imagem para a logo da clínica ou foto do perfil -->
+                                    <img src="img/profile.png" alt="A Clínica" class="cover">
+                                </div>
+                                <h3>A Clínica<br><span>@aclinica.mz</span></h3>
+                            </div>
+                            <div class="dot">
+                                <img src="img/icons/dot.png" alt="dot">
+                            </div>
+                        </div>
+                        <div class="imgBg">
+
+                            <!-- Alterar a imagem para algo relacionado à clínica -->
+                            <img src="img/team/bosddwdww.jpg" alt="bg" class="cover">
+                        </div>
+                        <div class="btns">
+                            <div class="left">
+                                <img src="img/icons/heart_red.png" alt="heart" class="heart" onclick="likeButton()">
+                                <img src="img/icons/comment.png" alt="comment">
+                                <img src="img/icons/share.png" alt="share">
+                            </div>
+                            <div class="right">
+                                <img src="img/icons/bookmark.png" alt="bookmark">
+                            </div>
+                        </div>
+                        <h4 class="likes">55 likes</h4>
+                        <h4 class="message">
+                            <b>aclinica.mz</b>
+                            Quem segue a página Dona Bebé já conhece o Calisto! Como não podia deixar de ser
+                        </h4>
+                        <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz/p/DIGqiErCdTG/">Ver todos os
+                                5
+                                comentários</a></h4>
+                    </div>
+                </a>
                 <div class="col-lg-12 text-center mt-4">
                     <div class="load__more">
-                        <a href="#" class="primary-btn"><i class="fa fa-instagram p-2"></i> Não perca as novidades:
+                        <a href="https://www.instagram.com/aclinica.mz/" class="primary-btn"><i
+                                class="fa fa-instagram p-2"></i> Não perca as novidades:
                             Siga-nos</a>
                     </div>
                 </div>
