--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
                     <li><a href="#" class="text-white"><img src="img/icons/contacto.png" class="fa mr-2" width="16"
                                 height="16" alt=""> +258 84 869 7194</a></li>
                     <li><img src="img/icons/home.png" class="fa mr-2" width="16" height="16" alt=""> Edifício ou
-                        Shopping 24, Avenida 24 de Julho, Loja 20
+                        Shopping 24, Avenida 24 de Julho, Loja 20  R/c
                     </li>
                     <li><img src="img/icons/horario.png" class="fa mr-2" width="16" height="16" alt=""> Seg a Sex 8:00
                         às 18:00 | Sab: 9h às 12h</li>
